# net-miniz

./: .gitignore  LICENSE.txt  NetMiniZ.sln  README.md
.github/workflows/: NetMiniZ-NuGet.yml  NetMiniZ.Native.yml  NetMiniZ.yml  build-native.yml  build.yml  libminiz.yml  native.yml  nuget-native.yml  nuget.yml  publish.yml  release.yml
NetMiniZ/: DecompressException.cs  NetMiniZ.csproj  NetMinizUtils.cs
NetMiniZ/Interop/: Libraries.cs  WinLibraries.cs
Tests/: Tests.csproj  UtilsTest.cs
libminiz/: CMakeLists.txt
native/: NetMiniZ.Native.linux-x64.nuspec  NetMiniZ.Native.nuspec  NetMiniZ.Native.osx-x64.nuspec  NetMiniZ.Native.win-x64.nuspec  NetMiniZ.Native.win-x86.nuspec
native/libminiz/: CMakeLists.txt  wrapper.cpp
native/nuget/: NetMiniZ.Native.linux-x64.nuspec  NetMiniZ.Native.nuspec  NetMiniZ.Native.osx-arm64.nuspec  NetMiniZ.Native.osx-x64.nuspec  NetMiniZ.Native.osx.nuspec  NetMiniZ.Native.win-x64.nuspec  NetMiniZ.Native.win-x86.nuspec
native/targets/: NetMiniZ.Native.linux-x64.targets  NetMiniZ.Native.osx-x64.targets  NetMiniZ.Native.win-x64.targets  NetMiniZ.Native.win-x86.targets
src/: NetMiniZ.sln
src/NetMiniZ/: BaseException.cs  CompressException.cs  DecompressException.cs  NetMiniZ.csproj  NetMiniZ.sln  NetMiniz.cs
src/NetMiniZ.Tests/: NetMiniZ.Tests.csproj  Tests.cs
src/NetMiniZ/Internal/: MiniZ.cs
src/NetMiniZ/Interop/: Libraries.Linux.cs  Libraries.OSX.cs  Libraries.Windows.cs  LinuxLibraries.cs  OSXLibraries.cs
tests/NetMiniZ.Tests/: NetMiniZ.Tests.csproj  Tests.cs
